# ffmpeg

./: ffmpeg.files  ffmpeg.includes
fftools/: ffmpeg.c  ffmpeg.h  ffmpeg_opt.c
selfnote/: CMakeLists.txt  sdldemo.cpp  simpleffplayer.cpp
